[DF-016][FIX] Swiper JS: modal z-index = 1

--- a/style/style.css
+++ b/style/style.css
@@ -292,6 +292,7 @@ body {
     height: 100%;
     background: rgba(0, 0, 0, 0.4);
     display: none;
+    z-index: 1;
 }
 .is-open {
     display: flex;
